fix: improve contast for better readability

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: rgb(0, 113, 227);
+  color: rgb(33, 31, 111);
 }
 
 body {
